// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ocaml 0 snapshot 1`] = `
[
  {
    "kind": "Error",
    "value": {
      "loc": [
        {
          "col": 22,
          "line": 1,
        },
        {
          "col": 31,
          "line": 1,
        },
      ],
      "stderr": "Line 1, characters 22-31:
Error: syntax error, consider adding a \`;' before

",
      "stdout": "",
      "value": "",
    },
  },
]
`;

exports[`ocaml 1 snapshot 1`] = `
[
  {
    "kind": "Error",
    "value": {
      "loc": [
        {
          "col": 14,
          "line": 1,
        },
        {
          "col": 30,
          "line": 1,
        },
      ],
      "stderr": "
Line 1, characters 14-30:
Error: syntax error, consider adding a \`;' before

",
      "stdout": "",
      "value": "",
    },
  },
]
`;

exports[`ocaml 2 snapshot 1`] = `
[
  {
    "kind": "Error",
    "value": {
      "loc": [
        {
          "col": 12,
          "line": 1,
        },
        {
          "col": 13,
          "line": 1,
        },
      ],
      "stderr": "
Line 1, characters 12-13:
Error: syntax error, consider adding a \`;' before

",
      "stdout": "",
      "value": "",
    },
  },
]
`;

exports[`ocaml 3 snapshot 1`] = `
[
  {
    "kind": "Error",
    "value": {
      "loc": [
        {
          "col": 18,
          "line": 1,
        },
        {
          "col": 19,
          "line": 1,
        },
      ],
      "stderr": "
Line 1, characters 18-19:
Error: syntax error, consider adding a \`;' before

",
      "stdout": "",
      "value": "",
    },
  },
]
`;

exports[`ocaml 4 snapshot 1`] = `
[
  {
    "kind": "Error",
    "value": {
      "loc": [
        {
          "col": 9,
          "line": 3,
        },
        {
          "col": 11,
          "line": 3,
        },
      ],
      "stderr": "
Line 3, characters 9-11:
Error: syntax error, consider adding a \`;' before

",
      "stdout": "",
      "value": "",
    },
  },
]
`;
